# herencia

herencia/: CMakeLists.txt  herencia.cpp
rombo con error/: CMakeLists.txt  ambiguo.cpp
rombo solucion/: CMakeLists.txt  tarea.cpp
